fix desk image on mobilel devices

--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,17 @@ hr.desk:after{
 	overflow: hidden;
 }
 
+@media only screen and (max-device-width: 480px) {
+	hr.desk:after{
+	    content: url(/img/desk.png);
+	    display: block;
+	    position: center;
+		height: 271px;
+		margin: 0 0;
+		overflow: hidden;
+	}
+	}
+
 #about .row {
 	text-align: center;
 	
